// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  >
    <label
      className="MuiFormLabel-root-12 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
      data-shrink={false}
      htmlFor="name-error"
    >
      foo
    </label>
    <div
      className="MuiInputBase-root-32 MuiInput-root-19 MuiInput-underline-23 MuiInputBase-formControl-33 MuiInput-formControl-20"
      onClick={[Function]}
    >
      <input
        aria-invalid={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInputBase-input-42 MuiInput-input-27"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <p
      className="MuiFormHelperText-root-49"
      id="name-error-text"
    />
  </div>
</div>
`;

exports[`renders correctly with error 1`] = `
<div>
  <div
    aria-describedby="name-error-text"
    className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  >
    <label
      className="MuiFormLabel-root-12 MuiFormLabel-error-15 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
      data-shrink={false}
      htmlFor="name-error"
    >
      foo
    </label>
    <div
      className="MuiInputBase-root-32 MuiInput-root-19 MuiInput-underline-23 MuiInputBase-error-38 MuiInput-error-24 MuiInputBase-formControl-33 MuiInput-formControl-20"
      onClick={[Function]}
    >
      <input
        aria-invalid={true}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInputBase-input-42 MuiInput-input-27"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={false}
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <p
      className="MuiFormHelperText-root-49 MuiFormHelperText-error-50"
      id="name-error-text"
    >
      bar
    </p>
  </div>
</div>
`;
